# agentic-router

./: README.md  pyproject.toml
agentic_router/: __init__.py
tests/: test_router.py
